feat: agregar funcion para desactivar cuenta
